--- a/app/static/style.css
+++ b/app/static/style.css
@@ -347,9 +347,44 @@ a:hover {
     cursor: pointer;
 }
 
-.pars{background:#ffffff;padding:10px 20px 20px 20px}
-.part{background:#ffffff;padding:20px 20px 0 20px}
-.cre_api{background:#f5f5f5;padding:20px;position:relative}
-.info_api{border:1px solid #ddd;margin-bottom:20px;}
-.btns{height:30px;line-height: 30px;}
-#navbarhanlder{text-align:center;line-height:120px;border-bottom-right-radius:5px;cursor:w-resize;border-top-right-radius:5px;width:14px;height:120px;background: rgba(91,192,222, 0.8);position:fixed;left:0;top:260px;color:#fff;box-shadow: 0px 0px 0px 1px #cccccc;}
+.pars {
+    background: #ffffff;
+    padding: 10px 20px 20px 20px
+}
+
+.part {
+    background: #ffffff;
+    padding: 20px 20px 0 20px
+}
+
+.cre_api {
+    background: #f5f5f5;
+    padding: 20px;
+    position: relative
+}
+
+.info_api {
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+}
+
+.btns {
+    height: 30px;
+    line-height: 30px;
+}
+
+#navbarhanlder {
+    text-align: center;
+    line-height: 120px;
+    border-bottom-right-radius: 5px;
+    cursor: w-resize;
+    border-top-right-radius: 5px;
+    width: 14px;
+    height: 120px;
+    background: rgba(91, 192, 222, 0.8);
+    position: fixed;
+    left: 0;
+    top: 260px;
+    color: #fff;
+    box-shadow: 0px 0px 0px 1px #cccccc;
+}
